--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -128,7 +128,7 @@
                                         <div class="badge bg-primary bg-gradient rounded-pill mb-2">
                                         ${isOpen}</div>
                                         <div class="badge bg-primary bg-gradient rounded-pill mb-2">
-                                        ${restaurant.rating}</div>
+                                        Note : ${restaurant.rating}</div>
                                         <p class="text-decoration-none link-dark stretched-link">
                                         <h5 class="card-title mb-3">${restaurant.name}</h5>
                                         </p>
