--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,7 +31,7 @@
             </section>
             <section id="suggestion" class="py-5 hidden">
                 <div class="container px-5 my-5">
-                    <div class="row gx-5 justify-content-center">
+                    <div class="row gx-5 justify-content-center padding-bottom:60px">
                         <div class="col-lg-8 col-xl-6">
                             <div class="text-center">
                                 <h2 class="fw-bolder">Découvrez ces adresses autour de ce thème</h2>
@@ -61,8 +61,19 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
         <script>
+            window.onload = scrollTo;
+            document.getElementById("triggerChoice").addEventListener('click',() => {
+                scrollTo(document.getElementById("displayResult"));
+                getRandomChoice();
+            });
 
-            document.getElementById("triggerChoice").addEventListener("click", getRandomChoice );
+            function scrollTo(element) {
+                window.scroll({
+                    behavior: 'smooth',
+                    left: 0,
+                    top: element.offsetTop
+                });
+            }
 
             function getRandomChoice() {
                 url = `<%=Rails.application.credentials.host_url%>/get_random_choice`
@@ -76,7 +87,6 @@
                     document.getElementById("suggestion").style.display = 'block'
                     getLocation()
                 }));
-
             }
         </script>
 
